# ics_birthdays

./: .gitignore  README.md  birthday_events.py  icalendar_script.py  pyproject.toml
