[tool.poetry]
name = "apple_calendar"
version = "0.1.0"
description = "script to add calendar"
authors = ["sn1c3"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
icalendar = "^4.0.9"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
